--- a/lib/client/index.html
+++ b/lib/client/index.html
@@ -3,12 +3,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aegir Web Client</title>
+    <title>Yasp Client</title>
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/loader.css" />
   </head>
   <body>
-    <div id="aegir-app">
+    <div id="yasp-app">
       <div class="cssload-loader" style="margin-top: 20%;">
       	<span></span>
       </div>
