Ajout authentification BasicAuth avec comptes locaux

--- a/lib/client/index.html
+++ b/lib/client/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yasp Client</title>
+    <title>Yasp</title>
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -11,7 +11,7 @@
     <div id="yasp-app">
       <div class="progress" style="margin: 20% 20%; with: 60%">
         <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%">
-          "Yasp Client" is loading...
+          "Yasp" is loading...
         </div>
       </div>
     </div>
