Base mise en place routeur React avec deep linking

--- a/lib/client/index.html
+++ b/lib/client/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div id="yasp-app">
-      <div class="progress" style="margin: 20% 20%; with: 60%">
+    <div id="app">
+      <div class="progress" style="margin: 30% 30%; with: 60%">
         <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%">
-          "Yasp" is loading...
+          Loading "Yasp"
         </div>
       </div>
     </div>
