--- a/lib/client/index.html
+++ b/lib/client/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yasp</title>
     <link rel="stylesheet" href="vendor/bootswatch/superhero/bootstrap.min.css" />
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
