Modification textes + ajouts attributs dans la vue Apps

--- a/lib/client/index.html
+++ b/lib/client/index.html
@@ -12,7 +12,7 @@
     <div id="app">
       <div class="progress" style="margin: 20% 30%; with: 60%">
         <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%">
-          Loading "Yasp"
+          <i class="fa fa-spinner"></i> Yasp
         </div>
       </div>
     </div>
